Tidy up the search bar double border fix
Match "box" instead of "*", as already done for the search bar GTK4 and
for the action box in GTK3. Also clarify which widget property is
causing the margin which needs to be undone.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -1404,7 +1404,7 @@ toolbar {
   border-radius: 0  0 5px 5px;
 }
 
-searchbar > revealer > *,
+searchbar > revealer > box,
 .location-bar {
   @extend %toolbar;
 
@@ -1414,8 +1414,8 @@ searchbar > revealer > *,
   padding: 3px;
 }
 
-// workaround: undo the GTK+ margin and use CSS padding instead
-searchbar > revealer > * {
+searchbar > revealer > box {
+  // workaround: undo the GtkContainer::border-width and use CSS padding instead
   margin: -6px;
   padding: 6px;
 }
