--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1172,11 +1172,13 @@ toolbar { //FIXME: why is all this being ignored?
   }
 }
 
-searchbar > revealer > * {
+searchbar > revealer > box {
   @extend toolbar;
   border-width: 0 0 1px;
   border-color: $borders_color;
   border-style: none none solid none;
+
+  // workaround: undo the GtkContainer::border-width and use CSS padding instead
   margin: -6px;
   padding: 9px;
 }
